# skydel-plug-ins

./: README.md
.github/workflows/: style_check.yml  ubuntu_cmake_build.yml  ubuntu_qmake_build.yml  windows_cmake_build.yml  windows_qmake_build.yml
examples/: examples.pro
examples/ublox_receiver_plugin/: CMakeLists.txt  constellation_selection_popup_view.cpp  constellation_selection_popup_view.h  constellation_selection_popup_view.ui  receiver_enums.h  start_receiver_view.cpp  start_receiver_view.h  start_receiver_view.ui  ublox_receiver_plugin.cpp  ublox_receiver_plugin.h  ublox_receiver_plugin.pro  ublox_receiver_view.cpp  ublox_receiver_view.h  ublox_receiver_view.ui
examples/ublox_receiver_plugin/backend/: .gitignore  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
examples/ublox_receiver_plugin/backend/examples/: command_example.cpp
examples/ublox_receiver_plugin/backend/include/serial/: serial.h
examples/ublox_receiver_plugin/backend/include/serial/impl/: unix.h  win.h
examples/ublox_receiver_plugin/backend/include/ublox/: ublox.h  ublox_structures.h
examples/ublox_receiver_plugin/backend/include/ublox_commands/: command.h  createReceiverCommand.h  currentFixCommand.h  getConfigurationCommand.h  getEnabledConstellationsCommand.h  getEnabledSatellitesCommand.h  getPositionCommand.h  getTimeCommand.h  receiver_enums.h  setConstellationsCommand.h  setSatellitesCommand.h  startCommand.h  startCommands.h  timeCommand.h
examples/ublox_receiver_plugin/backend/src/: serial.cc  ublox.cpp  ublox_node.cc
examples/ublox_receiver_plugin/backend/src/commands/: ColdStartCommand.cpp  CreateUbloxReceiver.cpp  HotStartCommand.cpp  StartCommand.cpp  WarmStartCommand.cpp  currentFixCommand.cpp  getConfigurationCommand.cpp  getEnabledConstellationsCommand.cpp  getEnabledSatellitesCommand.cpp  getPositionCommand.cpp  getTimeCommand.cpp  setConstellationsCommand.cpp  setSatellitesCommand.cpp  timeCommand.cpp
examples/ublox_receiver_plugin/backend/src/impl/: list_ports_linux.cc  unix.cc  win.cc
examples/ublox_receiver_plugin/backend/src/impl/list_ports/: list_ports_win.cc
source/example/ublox_receiver_plugin/: configure_receiver_view.cpp  configure_receiver_view.h  configure_receiver_view.ui  connect_receiver_view.cpp  connect_receiver_view.h  connect_receiver_view.ui  constellation_selection_view.cpp  constellation_selection_view.h  constellation_selection_view.ui  start_receiver_view.cpp  start_receiver_view.h  start_receiver_view.ui  ublox_receiver_plugin.cpp  ublox_receiver_plugin.h  ublox_receiver_plugin.pro  ublox_receiver_view.cpp  ublox_receiver_view.h  ublox_receiver_view.ui
